--- a/styles/style.css
+++ b/styles/style.css
@@ -2,75 +2,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 /* default styles */
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Open Sans', sans-serif;
 }
-button{
+
+button {
     transition: .5s;
     cursor: pointer;
 }
-.text-primary{
+
+.text-primary {
     color: #474747;
 }
-.primary_color{
+
+.primary_color {
     color: #FD6E0A;
 }
-.btn_primary{
+
+.btn_primary {
     background: #FD6E0A;
     color: #fff;
     border: none;
 }
-.btn_primary:hover{
+
+.btn_primary:hover {
     background: #ccc;
     color: #000;
 }
 
 /*header area css*/
-#header{
+#header {
     background: #FFF8F3;
-    background-image: url("../images/header_bg.png");
-    background-repeat: no-repeat;
-    background-position: bottom right;
+    background-image: url("../images/header_bg.png"), url("../images/developer.png");
+    background-position: bottom right, top left;
     padding: 20px 0 0 0;
+    background-repeat: no-repeat, no-repeat;
+    background-size: auto, 80px;
 }
 
 /*nav bar area css*/
-#header .header_nav{
+#header .header_nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 140px;
 }
-#header .header_nav .logo h3{
+
+#header .header_nav .logo h3 {
     color: #181818;
     font-size: 45px;
 }
-#header .header_nav ul{
+
+#header .header_nav ul {
     list-style: none;
     display: flex;
     align-items: center;
 }
-#header .header_nav ul li{
+
+#header .header_nav ul li {
     margin-right: 50px;
 }
-#header .header_nav ul li:last-child{
+
+#header .header_nav ul li:last-child {
     margin-right: 0;
 }
-#header .header_nav ul li a{
+
+#header .header_nav ul li a {
     text-decoration: none;
     color: #474747;
     transition: .5s;
     font-size: 20px;
 }
-#header .header_nav ul li a:hover{
+
+#header .header_nav ul li a:hover {
     cursor: pointer;
     color: #FD6E0A;
 }
-#header .header_nav ul li button{
+
+#header .header_nav ul li button {
     font-size: 20px;
     font-weight: 700;
     padding: 14px 36px;
@@ -80,47 +95,88 @@ button{
 }
 
 /*banner area css*/
-#header .banner{
+#header .banner {
     padding: 80px 30px 0 140px;
     display: flex;
     justify-content: space-between;
 }
-#header .banner .banner_content{
+
+#header .banner .banner_content {
     width: 575px;
     padding-top: 60px;
 }
-#header .banner .banner_content .name_title{
+
+#header .banner .banner_content .name_title {
     font-size: 45px;
     font-weight: 600;
 }
-#header .banner .banner_content .name{
+
+#header .banner .banner_content .name {
     font-size: 65px;
     font-weight: 700;
     margin: 10px 0;
 }
-#header .banner .banner_content p{
+
+#header .banner .banner_content p {
     font-size: 18px;
     line-height: 30px;
     margin-bottom: 20px;
 }
-#header .banner .banner_content button{
+
+#header .banner .banner_content button {
     text-align: center;
     font-size: 20px;
     font-weight: 700;
     padding: 15px 20px;
     border-radius: 5px;
 }
-#header .banner .banner_content .contact{
+
+#header .banner .banner_content .contact {
     margin-left: 15px;
     background: transparent;
     color: #FD6E0A;
     border: 1px solid #FD6E0A;
 }
-#header .banner .banner_content .contact:hover{
+
+#header .banner .banner_content .contact:hover {
     margin-left: 15px;
     background: #ccc;
     color: #000;
 }
-#header .banner .hardy_pic{
+
+#header .banner .hardy_pic {
     width: 410px;
+}
+
+/* about section styles */
+#about {
+    max-width: 1080px;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 100px 156px;
+}
+
+.section_title {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.self_desc {
+    text-align: center;
+    margin-bottom: 30px;
+}
+#about .div_row{
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    text-align: center;
+}
+.div_row .four_div .div_title{
+    font-weight: normal;
+}
+.div_row .four_div .div_desc{
+    font-weight: bold;
 }
