--- a/styles/style.css
+++ b/styles/style.css
@@ -167,16 +167,61 @@ button {
 .self_desc {
     text-align: center;
     margin-bottom: 30px;
+    color: #757575;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
-#about .div_row{
+
+#about .div_row {
     display: flex;
     justify-content: space-between;
     gap: 50px;
     text-align: center;
 }
-.div_row .four_div .div_title{
+
+.div_row .four_div .div_title {
     font-weight: normal;
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
 }
-.div_row .four_div .div_desc{
+
+.div_row .four_div .div_desc {
     font-weight: bold;
+}
+
+/*what_i_do area styles*/
+#what_i_do {
+    max-width: 1080px;
+    margin: 100px auto 0;
+}
+
+#what_i_do .work_desc {
+    max-width: 909px;
+    margin: 0 auto 50px;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+#what_i_do .work_row{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+#what_i_do .work_row .work_div{
+    border-radius: 5px;
+    background: #FFF;
+    padding: 33px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
+#what_i_do .work_row .work_div img{
+    width: 40px;
+    height: 40px;
+}
+#what_i_do .work_row .work_div .work_div_title{
+    margin: 30px 0 20px;
 }
