--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ button {
     border: none;
     text-align: center;
     border-radius: 5px;
+    transition: .5s;
 }
 
 .btn_primary:hover {
@@ -223,6 +224,14 @@ button {
     background: #FFF;
     padding: 33px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    transition: .5s;
+}
+#what_i_do .work_row .reactdiv{
+    background: #FD6E0A;
+}
+#what_i_do .work_row .work_div:hover{
+    background: #FD6E0A;
+    cursor: pointer;
 }
 #what_i_do .work_row .work_div img{
     width: 40px;
@@ -264,4 +273,52 @@ button {
 #resume .btn_div{
     text-align: center;
     margin-top: 69px;
+}
+/* footer area styles */
+#footer{
+    margin-top: 100px;
+    padding: 130px 150px;
+    background: #FFF8F3;
+}
+#footer .footer_row{
+    display: flex;
+    gap: 110px;
+}
+#footer .footer_row .footer_cols .footer_title{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+#footer .footer_row .footer_cols{
+    max-width: 500px;
+}
+#footer .footer_row .footer_cols .social_icons{
+    list-style: none;
+    display: flex;
+    gap: 24px;
+    margin-top: 30px;
+}
+#footer .footer_row .footer_cols form{
+    width: 500px;
+}
+#footer .footer_row .footer_cols form input, #footer .footer_row .footer_cols form textarea{
+    display: block;
+    width: 100%;
+    margin-bottom: 24px;
+    padding: 12px 0 12px 13px;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+}
+#footer .footer_row .footer_cols form .form_btn{
+    display: block;
+    width: 122px;
+    padding: 12px 20px;
+    margin-top: 10px;
+    background-color: #FD6E0A;
+}
+#footer .footer_row .footer_cols form .form_btn:hover{
+    color: #000;
+    background-color: #ccc;
+    cursor: pointer;
 }
