--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ button {
     background-position: bottom right, top left;
     padding: 20px 0 0 0;
     background-repeat: no-repeat, no-repeat;
-    background-size: auto, 80px;
+    background-size: 45%, 80px;
 }
 
 /*nav bar area css*/
